docker support (it actually works now)

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,11 @@
+"zamir":
+  - firstname: ["Amir", "A.", "A. Z.", "Amir Zamir"]
+  - url: "https://vilab.epfl.ch/zamir/"
+
+"atanov":
+  - firstname: ["Andrei", "A.", "A. A", "Andrei Atanov"]
+  - url: "https://andrewatanov.github.io"
+
 "adams":
   - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
     url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
