added art gallery

--- a/_config.yml
+++ b/_config.yml
@@ -198,6 +198,9 @@ collections:
   projects:
     output: true
     permalink: /:collection/:title/
+  art:
+    output: true
+    permalink: /:collection/:title/
 
 announcements:
   enabled: true
